2007-07-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: basic support
	for multiple nameservers, and switching back and forth
	between them.  Use:

	   yarp namespace /foo

	To set the namespace to "/foo" (default is "/root").  Use:

	   yarp namespace

	to query the current namespace.  "Namespace" just means the
	name of a port associated with a particular yarp name server.

	For example, on a single machine you could start up two
	name servers that operate independently:
	   [terminal 1] yarp namespace /space1
	   [terminal 1] yarp server
	   [terminal 2] yarp namespace /space2
	   [terminal 2] yarp server 20000
	The 20000 in the second server is the start of the range of
	socket port numbers that server manages.  If you plan to 
	simultaneously use multiple nameservers they need to own 
	different socket port ranges.
	After the above, names are registered and queried from /space2
	until you type
	   [terminal 3] yarp namespace /space1
	at which point they switch to the first namespace.
	
2007-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/DgramTwoWayStream.cpp: added environment
	variable control of packet sizes.  Set:
	  YARP_DGRAM_SIZE
	to the maximum number of bytes you want per packet.  This
	does not affect the size of messages that yarp can send,
	just the maximum size of individual packets within that message.
	
	If you wish to control UDP and MCAST packet sizes independently,
	set either/both of:
	  YARP_UDP_SIZE
	  YARP_MCAST_SIZE
	Make sure to keep the settings for senders and receivers of
	messages synchronized with each other.

2007-07-21  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_OS/include/yarp/os/Run.h
	* src/yarp/libYARP_OS/src/Run.cpp
	In killing processes, tries first SIGTERM
	and then SIGKILL. On windows, terminates
	processes as usual. Help added.

2007-07-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
