@@ -6,7 +6,7 @@ check-local: harness
 	./harness regression
 
 # automake_expand harness_SOURCES *.h *.cpp
-harness_SOURCES = AddressTest.cpp BinPortableTest.cpp BottleTest.cpp BufferedConnectionWriterTest.cpp ElectionTest.cpp harness.cpp ModuleTest.cpp NameConfigTest.cpp NameServerTest.cpp NetTypeTest.cpp PortablePairTest.cpp PortCommandTest.cpp PortCoreTest.cpp PortReaderBufferTest.cpp PortTest.cpp PropertyTest.cpp ProtocolTest.cpp RateThreadTest.cpp StampTest.cpp StreamConnectionReaderTest.cpp StringInputStreamTest.cpp StringOutputStreamTest.cpp StringTest.cpp TerminatorTest.cpp TestList.h ThreadTest.cpp TimeTest.cpp ValueTest.cpp VocabTest.cpp 
+harness_SOURCES = AddressTest.cpp BinPortableTest.cpp BottleTest.cpp BufferedConnectionWriterTest.cpp ElectionTest.cpp harness.cpp ModuleTest.cpp NameConfigTest.cpp NameServerTest.cpp NetTypeTest.cpp NetworkTest.cpp PortablePairTest.cpp PortCommandTest.cpp PortCoreTest.cpp PortReaderBufferTest.cpp PortTest.cpp PropertyTest.cpp ProtocolTest.cpp RateThreadTest.cpp StampTest.cpp StreamConnectionReaderTest.cpp StringInputStreamTest.cpp StringOutputStreamTest.cpp StringTest.cpp TerminatorTest.cpp TestList.h ThreadTest.cpp TimeTest.cpp ValueTest.cpp VocabTest.cpp 
 
 
 harness_DEPENDENCIES = $(top_builddir)/src/libYARP_OS/src/libYARP_OS.la
