@@ -44,6 +44,7 @@ extern yarp::UnitTest& getRateThreadTest();
 extern yarp::UnitTest& getStampTest();
 extern yarp::UnitTest& getModuleTest();
 extern yarp::UnitTest& getPortReaderBufferTest();
+extern yarp::UnitTest& getNetworkTest();
 
 class yarp::TestList {
 public:
@@ -76,6 +77,7 @@ public:
         root.add(getStampTest());
         root.add(getModuleTest());
         root.add(getPortReaderBufferTest());
+        root.add(getNetworkTest());
     }
 };
 
