@@ -1,3 +1,8 @@
+2007-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Companion.cpp: propagated a more
+	useful return value to Network::connect
+
 2007-07-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/NameConfig.cpp: basic support
